<resources>
    <string name="app_name">GitHub Viewer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name Nick</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Log out</string>

    <string name="menu_repositories">Repositories</string>
    <string name="menu_search">Search</string>
    <string name="menu_issues">Issues</string>
    <string name="login_with_github">Log in with GitHub</string>
    <string name="update">Update</string>
    <string name="welcome">Welcome</string>
    <string name="login_success">Login was completed successfully!</string>
    <string name="by_repositories">By repositories</string>
    <string name="by_users">By users</string>
    <string name="count_of_results">Number of results: %d</string>
    <string name="repository">Repository</string>
    <string name="state">State</string>
    <string name="enterReq">Enter your query in the search field</string>
    <string name="lastUpd">Last update</string>
    <string name="create">Create</string>
    <string name="privateRepos">Private</string>
    <string name="publicRepos">Public</string>
    <string name="nameRepos">Repository name</string>
    <string name="descriptRepos">Repository description</string>
    <string name="reqSend">The request has been sent</string>
    <string name="issueTitle">Issue title</string>
    <string name="issueBody">Issue body</string>
</resources>